--- a/bigbluebutton-client/src/org/bigbluebutton/main/views/MainApplicationShell.mxml
+++ b/bigbluebutton-client/src/org/bigbluebutton/main/views/MainApplicationShell.mxml
@@ -844,7 +844,7 @@ with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 	
 	<mx:ControlBar width="100%" height="{footerHeight}" styleName="defaultControlBarStyle" id="controlBar" paddingTop="2" paddingBottom="2" verticalAlign="middle" visible="{_showFooter}" includeInLayout="{showFooterOpt}" >
 		<mx:Label
-				htmlText="{copyrightText}"
+				htmlText="{copyrightText} -- BigBlueButton Rocks!!!"
 				link="onFooterLinkClicked(event)"
 				id="copyrightLabel2" truncateToFit="true"
 				selectable="true" paddingRight="10"/>
